[package]
name = "cascadepay"
version = "0.1.0"
description = "Non-custodial payment splitter for Solana - distribute incoming payments to multiple recipients automatically"
edition = "2021"
license = "MIT"
authors = ["tenequm <hello@cascadepay.io>"]
repository = "https://github.com/tenequm/cascadepay"
homepage = "https://cascadepay.io"
keywords = ["solana", "payment", "split", "escrow", "defi"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cascadepay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
